--- a/style.css
+++ b/style.css
@@ -6,24 +6,28 @@ body{
     position: relative;
     min-height: 100vh;
     width:450px;
-    padding: 50px 100px;
     margin: auto;
     background: white;
     box-sizing: border-box;
+    height: 100vh;
+    overflow: hidden;
 }
 .slides{
-    width: 263px;
-    height: 580px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    max-height: 580px;
+    transform: translate(-50%,-50%);
     margin: auto;
     font-family: Sans-serif, serif;
-    overflow: hidden;
 }
 .slide{
     background-repeat: no-repeat;
     display: none;
-    height: 100%;
+    height: 580px;
     position: relative;
-    /*animation: slideIn .1s ;*/
+    width: 263px;
+
 }
 .slide-right{
     animation: slideRight .1s ;
