--- a/style.css
+++ b/style.css
@@ -1,160 +1,205 @@
-body{
-    margin: 0;
+body {
+    margin: -20px auto;
+    padding: 0;
     background: black;
+    /*height: 800px;*/
 }
-.slider{
+
+.slider {
     position: relative;
-    min-height: 100vh;
-    width:450px;
+    /*height: 1000px;*/
+    width: 450px;
     margin: auto;
     background: white;
     box-sizing: border-box;
-    height: 100vh;
+    /*height: 100%;*/
     overflow: hidden;
 }
-.slides{
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    height: 100%;
-    max-height: 500px;
-    transform: translate(-50%,-50%);
+
+.slides {
+    /*position: absolute;*/
+    /*left: 50%;*/
+    /*top: 50%;*/
+    /*height: 100%;*/
+    /*height: 500px;*/
+    /*transform: translate(-50%,-50%);*/
     margin: auto;
     font-family: Sans-serif, serif;
-}
-.slide{
-    background-repeat: no-repeat;
-    display: none;
-    height: 100%;
-    position: relative;
-    width: 263px;
-}
-.slide-right{
-    animation: slideRight .1s ;
-}
-.slide-left{
-    animation: slideLeft .1s ;
-}
-.slide-h{
-    padding: 25px 20px 0;
-    color:rgb(86,183,147) ;
-}
-.sec1{
-    color:rgb(86,183,147) ;
-    position: relative;
-    font-size: 13px;
-    font-weight: 700;
-}
-.sec2{
-    color: rgb(75,88,222);
-    position: relative;
-    font-size: 13px;
-}
-.btn1,.btn2{
-    border-radius: 15px;
-    padding: 5px 30px;
-    outline: 0;
-    cursor: pointer;
-    transition: all 0.5s;
-}
-.btn1:hover,.btn2:hover{
-    opacity: 0.8;
-}
-.active{
-    display: block;
-}
-/*************************************** slide one ***************************************/
-.slide1{
-    background-image:url("images/Capture1.PNG");
-    background-size: cover;
-}
-.s1-sec1{
-    left: 150px;
-    top: 95px;
-}
-.s1-sec2{
-    left: 31px;
-    top: 52%;
-}
-.s1-btn1,.s2-btn1{
-    border: 2px solid rgb(75,88,222) ;
-    color: rgb(75,88,222);
-}
-.s1-btn2,.s2-btn2,.s3-btn2{
-    background: rgb(75,88,222) ;
-    border: 2px solid rgb(75,88,222) ;
-    color: white;
-    margin-left: 55px;
-}
-.s1-sec3{
-    position: relative;
-    top: 52%;
-    text-align: center;
+    padding: 120px 0;
 }
 
-/*************************************** end slide one ***************************************/
-/*************************************** slide two ***************************************/
-.slide2{
-    background-image:url("images/Capture2.PNG");
-    background-size: cover;
+@media (max-width:425px) and (min-width:262px){
+    .slides{
+        padding: 20px;
+    }
+   }
+@media (max-width:263px){
+    .slides{
+        padding: 0;
+    }
+    .slide{
+        width: 100%;
+    }
 }
-.s2-sec1{
-    left: 10px;
-    top: 80px;
-}
-.s2-sec2{
-    left: 20px;
-    top: 50%;
-}
-.s2-sec3{
-    position: relative;
-    top: 50%;
-    text-align: center;
-}
-/*************************************** end slide two ***************************************/
-/*************************************** slide two ***************************************/
-.slide3{
-    background-image:url("images/Capture3.PNG");
-    background-size: cover;
+    .slide {
+        background-repeat: no-repeat;
+        display: none;
+        height: 500px;
+        position: relative;
+        min-width: 263px;
+        max-width: 263px;
+        margin: auto;
+    }
 
-}
-.s3-sec2{
-    left: 18px;
-    top: 63%;
-}
-.s3-sec3{
-    position: relative;
-    top: 63%;
-    left: 100px;
-    /*text-align: center;*/
-}
-/*************************************** end slide three ***************************************/
-.left-slide,.right-slide{
-    position: absolute;
-    top: 50%;
-    padding: 10px;
-    cursor: pointer;
-}
-.left-slide{
-    left: 50px;
-}
-.right-slide{
-    right: 37px;
-}
+    .slide-right {
+        animation: slideRight .1s;
+    }
 
-@keyframes slideLeft {
-    0%{
-        right: -130%;
+    .slide-left {
+        animation: slideLeft .1s;
     }
-    100%{
-        right: 0;
+
+    .slide-h {
+        padding: 25px 20px 0;
+        color: rgb(86, 183, 147);
     }
-}
-@keyframes slideRight  {
-    0%{
-        left: -130%;
+
+    .sec1 {
+        color: rgb(86, 183, 147);
+        position: relative;
+        font-size: 13px;
+        font-weight: 700;
     }
-    100%{
-        left: 0;
+
+    .sec2 {
+        color: rgb(75, 88, 222);
+        position: relative;
+        font-size: 13px;
     }
-}
+
+    .btn1, .btn2 {
+        border-radius: 15px;
+        padding: 5px 30px;
+        outline: 0;
+        cursor: pointer;
+        transition: all 0.5s;
+    }
+
+    .btn1:hover, .btn2:hover {
+        opacity: 0.8;
+    }
+
+    .active {
+        display: block;
+    }
+
+    /*************************************** slide one ***************************************/
+    .slide1 {
+        background-image: url("images/Capture1.PNG");
+        background-size: cover;
+    }
+
+    .s1-sec1 {
+        left: 150px;
+        top: 95px;
+    }
+
+    .s1-sec2 {
+        left: 31px;
+        top: 52%;
+    }
+
+    .s1-btn1, .s2-btn1 {
+        border: 2px solid rgb(75, 88, 222);
+        color: rgb(75, 88, 222);
+    }
+
+    .s1-btn2, .s2-btn2, .s3-btn2 {
+        background: rgb(75, 88, 222);
+        border: 2px solid rgb(75, 88, 222);
+        color: white;
+        margin-left: 55px;
+    }
+
+    .s1-sec3 {
+        position: relative;
+        top: 52%;
+        text-align: center;
+    }
+
+    /*************************************** end slide one ***************************************/
+    /*************************************** slide two ***************************************/
+    .slide2 {
+        background-image: url("images/Capture2.PNG");
+        background-size: cover;
+    }
+
+    .s2-sec1 {
+        left: 10px;
+        top: 80px;
+    }
+
+    .s2-sec2 {
+        left: 20px;
+        top: 50%;
+    }
+
+    .s2-sec3 {
+        position: relative;
+        top: 50%;
+        text-align: center;
+    }
+
+    /*************************************** end slide two ***************************************/
+    /*************************************** slide two ***************************************/
+    .slide3 {
+        background-image: url("images/Capture3.PNG");
+        background-size: cover;
+
+    }
+
+    .s3-sec2 {
+        left: 18px;
+        top: 63%;
+    }
+
+    .s3-sec3 {
+        position: relative;
+        top: 63%;
+        left: 100px;
+        /*text-align: center;*/
+    }
+
+    /*************************************** end slide three ***************************************/
+    .left-slide, .right-slide {
+        position: absolute;
+        top: 50%;
+        padding: 10px;
+        cursor: pointer;
+        background-color: aqua;
+    }
+
+    .left-slide {
+        left: 50px;
+    }
+
+    .right-slide {
+        right: 37px;
+    }
+
+    @keyframes slideLeft {
+        0% {
+            right: -130%;
+        }
+        100% {
+            right: 0;
+        }
+    }
+    @keyframes slideRight {
+        0% {
+            left: -130%;
+        }
+        100% {
+            left: 0;
+        }
+    }
