--- a/style.css
+++ b/style.css
@@ -27,12 +27,270 @@ body {
     font-family: Sans-serif, serif;
     padding: 120px 0;
 }
+a{
+    cursor: pointer;
+    font-size: 12px;
+    color: lightblue;
+}
+.slide {
+    background-repeat: no-repeat;
+    display: none;
+    height: 500px;
+    position: relative;
+    min-width: 263px;
+    max-width: 263px;
+    margin: auto;
+}
+
+.slide-right {
+    animation: slideRight .1s;
+}
+
+.slide-left {
+    animation: slideLeft .1s;
+}
+
+.slide-h {
+    padding: 15px 20px 0;
+    color: rgb(86, 183, 147);
+}
+
+.sec1 {
+    color: rgb(86, 183, 147);
+    position: relative;
+    font-size: 13px;
+    font-weight: 700;
+}
+
+.sec2 {
+    color: rgb(75, 88, 222);
+    position: relative;
+    font-size: 13px;
+}
+
+.btn1, .btn2 {
+    border-radius: 15px;
+    padding: 5px 30px;
+    outline: 0;
+    cursor: pointer;
+    transition: all 0.5s;
+}
+
+.btn1:hover, .btn2:hover {
+    opacity: 0.8;
+}
+
+.active {
+    display: block;
+}
+
+/*************************************** slide one ***************************************/
+.slide1 {
+    background-image: url("images/Capture1.PNG");
+    background-size: cover;
+}
+
+.s1-sec1 {
+    left: 150px;
+    top: 95px;
+}
+
+.s1-sec2 {
+    left: 31px;
+    top: 52%;
+}
+
+.s1-btn1, .s2-btn1 {
+    border: 2px solid rgb(75, 88, 222);
+    color: rgb(75, 88, 222);
+}
+
+.s1-btn2, .s2-btn2, .s3-btn2 {
+    background: rgb(75, 88, 222);
+    border: 2px solid rgb(75, 88, 222);
+    color: white;
+    margin-left: 55px;
+}
+
+.s1-sec3 {
+    position: relative;
+    top: 52%;
+    text-align: center;
+}
+
+/*************************************** end slide one ***************************************/
+/*************************************** slide two ***************************************/
+.slide2 {
+    background-image: url("images/Capture2.PNG");
+    background-size: cover;
+}
+
+.s2-sec1 {
+    left: 10px;
+    top: 80px;
+}
+
+.s2-sec2 {
+    left: 20px;
+    top: 50%;
+}
+
+.s2-sec3 {
+    position: relative;
+    top: 50%;
+    text-align: center;
+}
+
+/*************************************** end slide two ***************************************/
+/*************************************** slide two ***************************************/
+.slide3 {
+    background-image: url("images/Capture3.PNG");
+    background-size: cover;
+
+}
+
+.s3-sec2 {
+    left: 18px;
+    top: 63%;
+}
+
+.s3-sec3 {
+    position: relative;
+    top: 63%;
+    left: 100px;
+    /*text-align: center;*/
+}
+
+/*************************************** end slide three ***************************************/
+/*************************************** slide four ***************************************/
+.slide4 {
+    background-image: url("images/Capture4.PNG");
+    background-size: cover;
+}
+
+.s4-sec1 {
+    left: 10px;
+    top: 80px;
+}
+
+.s4-sec2 {
+    left: 20px;
+    top: 50%;
+}
+
+.s4-sec3 {
+    position: relative;
+    top: 77%;
+    text-align: center;
+}
+.s4-btn2,.s4-btn1{
+    display: block;
+    margin: 10px auto;
+    width: 160px;
+}
+
+.s4-btn1, .s4-btn1 {
+    border: 2px solid rgb(75, 88, 222);
+    color: rgb(75, 88, 222);
+    background-color: white;
+}
+
+.s4-btn2, .s4-btn2 {
+    background: rgb(75, 88, 222);
+    border: 2px solid white;
+    color: white;
+}
+
+/*************************************** end slide four ***************************************/
+/*************************************** slide 5 ***************************************/
+.slide5 {
+    background-image: url("images/Capture5.PNG");
+    background-size: cover;
+}
+
+.s5-sec1 {
+   text-align: center;
+    position: relative;
+    top: 70px;
+
+}
+.s5-sec1 form input {
+    margin: 7px;
+    border-radius: 8px;
+    padding: 8px;
+    width: 80%;
+    outline: 0;
+    border: 0;
+    box-shadow: 0px 0px 5px 1px #7a7777;
+}
+.s5-sec1 i{
+    padding: 15px;
+    font-size: 33px;
+    color: white;
+}
+.s5-sec2 {
+    position: relative;
+    top: 40%;
+    text-align: center;
+}
+.s5-btn1{
+    border: 2px solid rgb(75, 88, 222);
+    color: rgb(75, 88, 222);
+    background-color: white;
+}
+.forget{
+    text-decoration: underline;
+}
+.slide5 p{
+    margin: 0;
+    color: white;
+}
+.icons i{
+    font-size:20px;
+    margin: 10px 5px;
+}
+.last-p{
+    font-size: 14px;
+}
+/*************************************** end slide 5 ***************************************/
+.left-slide, .right-slide {
+    position: absolute;
+    top: 50%;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.left-slide {
+    left: 50px;
+}
+
+.right-slide {
+    right: 37px;
+}
+
+@keyframes slideLeft {
+    0% {
+        right: -130%;
+    }
+    100% {
+        right: 0;
+    }
+}
+
+@keyframes slideRight {
+    0% {
+        left: -130%;
+    }
+    100% {
+        left: 0;
+    }
+}
 
 @media (max-width:425px) and (min-width:262px){
     .slides{
         padding: 20px;
     }
-   }
+}
 @media (max-width:263px){
     .slides{
         padding: 0;
@@ -41,165 +299,3 @@ body {
         width: 100%;
     }
 }
-    .slide {
-        background-repeat: no-repeat;
-        display: none;
-        height: 500px;
-        position: relative;
-        min-width: 263px;
-        max-width: 263px;
-        margin: auto;
-    }
-
-    .slide-right {
-        animation: slideRight .1s;
-    }
-
-    .slide-left {
-        animation: slideLeft .1s;
-    }
-
-    .slide-h {
-        padding: 25px 20px 0;
-        color: rgb(86, 183, 147);
-    }
-
-    .sec1 {
-        color: rgb(86, 183, 147);
-        position: relative;
-        font-size: 13px;
-        font-weight: 700;
-    }
-
-    .sec2 {
-        color: rgb(75, 88, 222);
-        position: relative;
-        font-size: 13px;
-    }
-
-    .btn1, .btn2 {
-        border-radius: 15px;
-        padding: 5px 30px;
-        outline: 0;
-        cursor: pointer;
-        transition: all 0.5s;
-    }
-
-    .btn1:hover, .btn2:hover {
-        opacity: 0.8;
-    }
-
-    .active {
-        display: block;
-    }
-
-    /*************************************** slide one ***************************************/
-    .slide1 {
-        background-image: url("images/Capture1.PNG");
-        background-size: cover;
-    }
-
-    .s1-sec1 {
-        left: 150px;
-        top: 95px;
-    }
-
-    .s1-sec2 {
-        left: 31px;
-        top: 52%;
-    }
-
-    .s1-btn1, .s2-btn1 {
-        border: 2px solid rgb(75, 88, 222);
-        color: rgb(75, 88, 222);
-    }
-
-    .s1-btn2, .s2-btn2, .s3-btn2 {
-        background: rgb(75, 88, 222);
-        border: 2px solid rgb(75, 88, 222);
-        color: white;
-        margin-left: 55px;
-    }
-
-    .s1-sec3 {
-        position: relative;
-        top: 52%;
-        text-align: center;
-    }
-
-    /*************************************** end slide one ***************************************/
-    /*************************************** slide two ***************************************/
-    .slide2 {
-        background-image: url("images/Capture2.PNG");
-        background-size: cover;
-    }
-
-    .s2-sec1 {
-        left: 10px;
-        top: 80px;
-    }
-
-    .s2-sec2 {
-        left: 20px;
-        top: 50%;
-    }
-
-    .s2-sec3 {
-        position: relative;
-        top: 50%;
-        text-align: center;
-    }
-
-    /*************************************** end slide two ***************************************/
-    /*************************************** slide two ***************************************/
-    .slide3 {
-        background-image: url("images/Capture3.PNG");
-        background-size: cover;
-
-    }
-
-    .s3-sec2 {
-        left: 18px;
-        top: 63%;
-    }
-
-    .s3-sec3 {
-        position: relative;
-        top: 63%;
-        left: 100px;
-        /*text-align: center;*/
-    }
-
-    /*************************************** end slide three ***************************************/
-    .left-slide, .right-slide {
-        position: absolute;
-        top: 50%;
-        padding: 10px;
-        cursor: pointer;
-        background-color: aqua;
-    }
-
-    .left-slide {
-        left: 50px;
-    }
-
-    .right-slide {
-        right: 37px;
-    }
-
-    @keyframes slideLeft {
-        0% {
-            right: -130%;
-        }
-        100% {
-            right: 0;
-        }
-    }
-    @keyframes slideRight {
-        0% {
-            left: -130%;
-        }
-        100% {
-            left: 0;
-        }
-    }
