--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 .slider {
     position: relative;
     /*height: 1000px;*/
-    width: 450px;
+    max-width: 450px;
     margin: auto;
     background: white;
     box-sizing: border-box;
@@ -34,6 +34,8 @@ a{
 }
 .slide {
     background-repeat: no-repeat;
+    background-size: contain;
+    background-position:center;
     display: none;
     height: 500px;
     position: relative;
@@ -87,7 +89,6 @@ a{
 /*************************************** slide one ***************************************/
 .slide1 {
     background-image: url("images/Capture1.PNG");
-    background-size: cover;
 }
 
 .s1-sec1 {
@@ -122,7 +123,6 @@ a{
 /*************************************** slide two ***************************************/
 .slide2 {
     background-image: url("images/Capture2.PNG");
-    background-size: cover;
 }
 
 .s2-sec1 {
@@ -145,8 +145,6 @@ a{
 /*************************************** slide two ***************************************/
 .slide3 {
     background-image: url("images/Capture3.PNG");
-    background-size: cover;
-
 }
 
 .s3-sec2 {
@@ -165,7 +163,6 @@ a{
 /*************************************** slide four ***************************************/
 .slide4 {
     background-image: url("images/Capture4.PNG");
-    background-size: cover;
 }
 
 .s4-sec1 {
@@ -205,7 +202,6 @@ a{
 /*************************************** slide 5 ***************************************/
 .slide5 {
     background-image: url("images/Capture5.PNG");
-    background-size: cover;
 }
 
 .s5-sec1 {
