--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    margin: -20px auto;
+    margin: 0 auto;
     padding: 0;
     background: black;
     /*height: 800px;*/
@@ -12,8 +12,11 @@ body {
     margin: auto;
     background: white;
     box-sizing: border-box;
-    /*height: 100%;*/
+    height: 100vh;
     overflow: hidden;
+    font-family: Sans-serif, serif;
+    padding: 110px 0;
+
 }
 
 .slides {
@@ -23,9 +26,7 @@ body {
     /*height: 100%;*/
     /*height: 500px;*/
     /*transform: translate(-50%,-50%);*/
-    margin: auto;
-    font-family: Sans-serif, serif;
-    padding: 120px 0;
+
 }
 a{
     cursor: pointer;
