--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@ body {
     margin: 0 auto;
     padding: 0;
     background: black;
-    /*height: 800px;*/
 }
 
 .slider {
     position: relative;
-    /*height: 1000px;*/
+    display: grid;
+    align-items: center;
     max-width: 450px;
     margin: auto;
     background: white;
@@ -15,18 +15,6 @@ body {
     height: 100vh;
     overflow: hidden;
     font-family: Sans-serif, serif;
-    padding: 110px 0;
-
-}
-
-.slides {
-    /*position: absolute;*/
-    /*left: 50%;*/
-    /*top: 50%;*/
-    /*height: 100%;*/
-    /*height: 500px;*/
-    /*transform: translate(-50%,-50%);*/
-
 }
 a{
     cursor: pointer;
