--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ a{
     width: 80%;
     outline: 0;
     border: 0;
-    box-shadow: 0px 0px 5px 1px #7a7777;
+    box-shadow: 0 0 5px 1px #7a7777;
 }
 .s5-sec1 i{
     padding: 15px;
@@ -270,11 +270,11 @@ a{
     }
 }
 
-@media (max-width:425px) and (min-width:262px){
-    .slides{
-        padding: 20px;
-    }
-}
+/*@media (max-width:425px) and (min-width:262px){*/
+/*    .slides{*/
+/*        padding: 20px;*/
+/*    }*/
+/*}*/
 @media (max-width:263px){
     .slides{
         padding: 0;
