--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@ a{
     font-size: 12px;
     color: lightblue;
 }
+.slides {
+    margin-top: -60px;
+}
 .slide {
     background-repeat: no-repeat;
     background-size: contain;
